typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            42,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts:3:6
  |
3 |     [Symbol.iterator]: string;
  |      ^^^^^^

